--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.csv
+prove/Develop02/*.csv
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
