--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 prove/Develop02/*.csv
+prove/Develop04/*.txt
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
